Use a SASS mixin to vertically align the header image and fixed text spacing issues on new tweets

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,7 +4,7 @@ nav {
   align-items: center;
   height: 120px;
   width: 100%;
-  background-color: #3fa36b;
+  background-color: #4056A1;
   color: #FFFFFF;
   padding: 0 1.5em;
   line-height: 120px;
