--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,3 @@
-$primary: #3fa36b;
+$primary: #4056A1;
 $white: #FFFFFF;
 $big-font: Bungee;
