--- a/sass/new-tweet.scss
+++ b/sass/new-tweet.scss
@@ -11,6 +11,7 @@
   margin-top: 0.5rem;
   width: auto;
   top: 160px;
+  word-wrap: break-word;
 }
 
 
